add script do dashboard

--- a/atividade02.ipynb
+++ b/atividade02.ipynb
@@ -1197,6 +1197,121 @@
       "metadata": {
         "id": "deBb4YmJCrWx"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**6. Código para implementação do Dashboard**\n",
+        "\n",
+        "Após instalar as bibliotecas necessárias, execute o comando \"**streamlit run spotify_dashboard.py**\" para rodar o script e carregar o dashboard."
+      ],
+      "metadata": {
+        "id": "LmSKWJJHUvN2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import streamlit as st\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import numpy as np\n",
+        "\n",
+        "# Load the data (replace 'dados_spotify.csv' with the actual path if needed)\n",
+        "df = pd.read_csv('dados_spotify.csv')\n",
+        "\n",
+        "# --- Streamlit Dashboard ---\n",
+        "st.title(\"Análise de Dados do Spotify\")\n",
+        "\n",
+        "# Sidebar for navigation\n",
+        "st.sidebar.title(\"Navegação\")\n",
+        "page = st.sidebar.radio(\"Selecione uma página:\", [\"Visão Geral\", \"Popularidade\", \"Temporal\", \"Duração\"])\n",
+        "\n",
+        "\n",
+        "# Function to display a DataFrame nicely\n",
+        "def display_df(df_to_display):\n",
+        "    st.dataframe(df_to_display.style.highlight_max(axis=0))\n",
+        "\n",
+        "\n",
+        "# --- Visão Geral ---\n",
+        "if page == \"Visão Geral\":\n",
+        "    st.write(\"## Visão Geral dos Dados\")\n",
+        "    st.write(\"Aqui está um resumo dos dados coletados:\")\n",
+        "    st.dataframe(df.head())\n",
+        "\n",
+        "    # Add some basic statistics\n",
+        "    st.write(\"### Estatísticas Descritivas:\")\n",
+        "    st.dataframe(df.describe(include='all').T)\n",
+        "\n",
+        "\n",
+        "\n",
+        "# --- Popularidade ---\n",
+        "elif page == \"Popularidade\":\n",
+        "    st.write(\"## Análise de Popularidade\")\n",
+        "    st.write(\"### Relação Popularidade do Artista x Música\")\n",
+        "\n",
+        "    # Calcula a popularidade média das músicas por artista\n",
+        "    pop_media = df.groupby('artista_nome').agg({\n",
+        "        'musica_popularidade': 'mean',\n",
+        "        'artista_popularidade': 'first'\n",
+        "    }).round(2)\n",
+        "\n",
+        "    fig, ax = plt.subplots(figsize=(10, 6))\n",
+        "    sns.scatterplot(data=pop_media, x='artista_popularidade', y='musica_popularidade', ax=ax)\n",
+        "\n",
+        "    # Add labels and trendline\n",
+        "    for i, artista in enumerate(pop_media.index):\n",
+        "      ax.annotate(artista, (pop_media['artista_popularidade'][i], pop_media['musica_popularidade'][i]), xytext=(5, 5), textcoords='offset points')\n",
+        "    z = np.polyfit(pop_media['artista_popularidade'], pop_media['musica_popularidade'], 1)\n",
+        "    p = np.poly1d(z)\n",
+        "    plt.plot(pop_media['artista_popularidade'], p(pop_media['artista_popularidade']), \"r--\", alpha=0.8)\n",
+        "\n",
+        "    st.pyplot(fig)\n",
+        "\n",
+        "    # Show metricas_pop\n",
+        "    st.write(\"### Métricas de Popularidade:\")\n",
+        "    display_df(metricas_pop)\n",
+        "\n",
+        "\n",
+        "# --- Temporal ---\n",
+        "elif page == \"Temporal\":\n",
+        "    st.write(\"## Análise Temporal\")\n",
+        "    st.write(\"### Distribuição da Popularidade por Ano de Lançamento\")\n",
+        "\n",
+        "    # Convertendo a coluna de data (dentro do elif)\n",
+        "    df['data_lancamento'] = pd.to_datetime(df['data_lancamento'], errors='coerce')\n",
+        "    df['ano_lancamento'] = df['data_lancamento'].dt.year\n",
+        "\n",
+        "    fig, ax = plt.subplots(figsize=(10, 6))\n",
+        "    sns.boxplot(data=df, x='ano_lancamento', y='musica_popularidade', ax=ax)\n",
+        "    plt.xticks(rotation=45)\n",
+        "    st.pyplot(fig)\n",
+        "\n",
+        "    st.write(\"### Métricas Temporais:\")\n",
+        "    display_df(metricas_temp)\n",
+        "\n",
+        "\n",
+        "# --- Duração ---\n",
+        "elif page == \"Duração\":\n",
+        "    st.write(\"## Análise de Duração\")\n",
+        "\n",
+        "    # Convertendo duração para minutos (dentro do elif)\n",
+        "    df['duracao_min'] = df['duracao_ms'] / (1000 * 60)\n",
+        "\n",
+        "    fig, ax = plt.subplots(figsize=(10, 6))\n",
+        "    sns.scatterplot(data=df, x='duracao_min', y='musica_popularidade', alpha=0.6, ax=ax)\n",
+        "    st.pyplot(fig)\n",
+        "\n",
+        "\n",
+        "    st.write(\"### Métricas de Duração:\")\n",
+        "    display_df(metricas_dur)"
+      ],
+      "metadata": {
+        "id": "O9tqnEhGU4tP"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
